added main cart functionality

--- a/docs/01. Neo.md
+++ b/docs/01. Neo.md
@@ -37,7 +37,7 @@ neo('.el').on('click', (event) => {
 ```js 
 neo('.el').on('userCancelAction', () => {
     // calls when user clicks outside of .el or press escape
-});
+}, {skipElements: [cartBtn]}); // here point el that we clicked
 ```
 
 ### User typing
